<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_constant_costs_add_item_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">


    <ScrollView
        android:id="@+id/settings_constant_costs_add_scroll_view_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:elevation="10dp"
            android:background="@android:color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:gravity="left"
        android:textSize="30dp"
        android:textStyle="bold"
        android:text="@string/name"/>
    <EditText
        android:id="@+id/settings_constant_costs_add_cost_name_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center_horizontal"
        android:hint="@string/add"
        android:textSize="30dp"
        android:visibility="visible"
        android:inputType="text"
        android:maxLines="1"
        android:nextFocusDown="@+id/settings_constant_costs_add_cost_value_id"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:gravity="left"
        android:textSize="30dp"
        android:textStyle="bold"
        android:text="@string/how_much"/>
    <EditText
        android:id="@+id/settings_constant_costs_add_cost_value_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center_horizontal"
        android:hint="@string/add"
        android:textSize="30dp"
        android:inputType="numberDecimal"
        android:imeOptions="actionDone"/>
    <Spinner
        android:id="@+id/settings_constant_costs_category_spinner_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/constant_costs_categories"
        android:prompt="@string/choose" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2">
        <Button
            android:id="@+id/settings_constant_costs_add_approve_button_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/button_background"
            android:layout_marginRight="10dp"
            android:textSize="20dp"
            android:text="@string/approve"
            android:textAllCaps="false"
            android:textColor="@color/button_text"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/settings_constant_costs_add_cancel_button_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/button_background"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:text="@string/cancel"
            android:textColor="@color/button_text"
            android:textAllCaps="false"
            android:layout_weight="1"/>
    </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>