<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.berlejbej.saver.MainActivity">

    <TextView
        android:id="@+id/starting_title_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center_horizontal"
        android:textSize="30dp"
        android:textStyle="bold"
        android:text="@string/income"/>

    <ScrollView
        android:id="@+id/starting_scroll_view_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_below="@id/starting_title_id">

        <LinearLayout
            android:id="@+id/starting_linear_layout_main_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="vertical"
            android:clipToPadding="false">

            <LinearLayout
                android:id="@+id/starting_income_linear_layout_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:elevation="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/settings_income_name_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:gravity="left"
                    android:textSize="25dp"
                    android:text="@string/your_monthly_income"/>
                <EditText
                    android:id="@+id/settings_income_value_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/add"
                    android:textSize="35dp"
                    android:inputType="numberDecimal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:weightSum="2">
                <Button
                    android:id="@+id/settings_income_ok_button_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/button_background"
                    android:layout_marginRight="5dp"
                    android:textSize="20dp"
                    android:text="@string/ok"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/settings_income_cancel_button_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/button_background"
                    android:layout_marginLeft="5dp"
                    android:textSize="20dp"
                    android:text="@string/cancel"
                    android:textColor="@color/button_text"
                    android:textAllCaps="false"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
