<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <!-- TITLE -->
    <TextView
        android:id="@+id/add_cost_title_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/add_cost"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/line_separator"
        android:layout_below="@id/add_cost_title_id"/>

    <!-- MAIN PART -->
    <LinearLayout
        android:id="@+id/add_cost_linear_layout_main_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:clipToPadding="false"
        android:layout_below="@id/add_cost_title_id">

        <!-- CATEGORY -->
        <LinearLayout
            android:id="@+id/add_cost_what_linear_layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/add_cost_what_text_view_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textSize="15dp"
                    android:text="@string/category"/>
                <Spinner
                    android:id="@+id/add_cost_categories_spinner_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/add_cost_what_text_view_id"
                    android:layout_marginLeft="20dp"
                    android:entries="@array/cost_categories"
                    android:prompt="@string/choose" />
            </RelativeLayout>

            <EditText
                android:id="@+id/add_cost_category_name_edit_text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:gravity="center_horizontal"
                android:hint="@string/add"
                android:textSize="30dp"
                android:visibility="gone"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/line_separator" />

        <!-- AMOUNT -->
        <RelativeLayout
            android:id="@+id/add_cost_how_much_linear_layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/target_value_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_centerVertical="true"
                android:text="@string/how_much"/>
            <EditText
                android:id="@+id/add_cost_how_much_edit_text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:layout_toEndOf="@id/target_value_TV"
                android:hint="@string/add"
                android:textSize="20dp"
                android:singleLine="true"
                android:inputType="numberDecimal"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/line_separator" />

        <!-- BUTTONS -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:id="@+id/add_cost_ok_button_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/button_background"
                android:layout_marginRight="5dp"
                android:textSize="20dp"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textColor="@color/button_text"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/add_cost_cancel_button_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/button_background"
                android:layout_marginLeft="5dp"
                android:textSize="20dp"
                android:text="@string/cancel"
                android:textColor="@color/button_text"
                android:textAllCaps="false"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
