<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.berlejbej.saver.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center_horizontal"
        android:textSize="30dp"
        android:textStyle="bold"
        android:text="@string/add_target"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_below="@id/title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:clipToPadding="false"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:elevation="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:gravity="left"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:text="@string/target"/>
                <EditText
                    android:id="@+id/target_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/add"
                    android:textSize="30dp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/target_value"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:elevation="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:gravity="left"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:text="@string/how_much"/>
                <EditText
                    android:id="@+id/target_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:inputType="numberDecimal"
                    android:gravity="center_horizontal"
                    android:hint="@string/add"
                    android:textSize="30dp"
                    android:imeOptions="actionDone"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:elevation="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:gravity="left"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:text="@string/till_when"/>
                <CalendarView
                    android:id="@+id/add_target_calendar_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">
                </CalendarView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:weightSum="2">
                <Button
                    android:id="@+id/button_ok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/button_background"
                    android:textColor="@color/button_text"
                    android:layout_marginRight="5dp"
                    android:textSize="20dp"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/button_background"
                    android:textColor="@color/button_text"
                    android:layout_marginLeft="5dp"
                    android:textSize="20dp"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
