<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/main_remaining_view_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:layout_marginLeft="@dimen/block_margin_horizontal"
    android:layout_marginRight="@dimen/block_margin_horizontal"
    android:layout_marginTop="@dimen/block_margin_vertical"
    android:layout_marginBottom="@dimen/block_margin_vertical"
    android:paddingBottom="@dimen/block_padding_vertical"
    android:paddingTop="@dimen/block_padding_vertical"
    android:elevation="@dimen/block_elevation"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/main_remaining_view_title_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/block_title_padding_vertical"
        android:paddingBottom="@dimen/block_title_padding_vertical"
        android:gravity="center"
        android:textSize="@dimen/text_title_size"
        android:textStyle="bold"
        android:text="@string/remaining_avail_money"
        android:layout_alignParentTop="true" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/line_separator" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="@dimen/block_margin_horizontal"
        android:layout_marginRight="@dimen/block_margin_horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_title_size"
            android:gravity="left"
            android:text="@string/today"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/main_remaining_view_value_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_title_size"
            android:gravity="right"
            android:text="@string/remaining_avail_money"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="@dimen/block_margin_horizontal"
        android:layout_marginRight="@dimen/block_margin_horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_title_size"
            android:gravity="left"
            android:text="@string/month"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/main_remaining_view_overall_value_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_title_size"
            android:gravity="right"
            android:text="@string/remaining_avail_money"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>